fixed some issues and added swagger documentation
